---------------------------------------------------------------------------------------------------
Version: 2.1.3
Date: ????
  Bugfixes:
    - "My name is... Tim." Fix recipe for tin plate from crushed bobmonium under some circumstances
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 2022-03-19
  Locale:
    - Updated Korean, Russian localizations
    - Added localization for Ukrainian
    - Cleaned up empty localization files
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2022-01-03
  Bugfixes:
    - Fixed that the effect of the setting "Use Vanilla-style chemical plants" was inverted
    - Fixed that the function `angels_chemical_plant` was not actually available to be called when "Use Vanilla-style chemical plants" was enabled (and thus inverted)
    - Fixed that tints were not applied to angel-style chemical plants, and tier labels couldn't be adjusted
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2022-01-03
  Features:
    - Setting "Use Angel's material colors for intermediates" now includes support for player armor
    - Added setting "Use Vanilla-style chemical plants", (default off) to use vanilla chemical plant sprites and animations when Angel's setting "Disable Bob's chemical plants" is enabled
    - Additions of EmmyLua-style documentation is ongoing
    - Improved support for Angel's Special Vanilla recipes
  Changes:
    - Reskinning of the standard Factorio pipe has been moved into Artisanal Reskins: Library to support adjustments to pipe sprites and shadows in the entire suite
    - Internal restructuring to make entity reskinning through functions globally available under `reskins.lib.apply_skin` is ongoing
    - Iron rod recipes now use the base Factorio iron rod sprites
  Bugfixes: